# nano-verl

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements-real.txt
.github/workflows/: ci.yml
data/: grpo_math_eval.jsonl  grpo_math_train.jsonl  prompts.jsonl
nano_verl/: __init__.py  eval.py  main.py  metrics.py  prompt_source.py  real_data.py  real_reward.py  reward.py  rollout.py  selector.py  train_grpo.py  train_native.py  types.py
nano_verl/backends/: __init__.py  base.py  factory.py  megatron.py  mock.py  vllm.py
nano_verl/native/: __init__.py  config.py  data.py  grpo.py  policy.py  reporting.py  rewards.py  trainer.py
nano_verl/trainer/: __init__.py  actor.py  backends.py  config.py  dataflow.py  dataset.py  orchestrator.py  rewards.py
scripts/: run_grpo_local.sh  run_grpo_vllm_server.sh  run_native_grpo_local.sh  run_rollout_vllm_server.sh
tests/: test_backends.py  test_dataflow.py  test_native_grpo.py  test_native_reporting.py  test_prompt_source.py  test_reward_and_selector.py
