[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-verl"
version = "0.1.0"
description = "A small learning-oriented project for understanding LLM post-training dataflow."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "nano_verl contributors" }
]
keywords = ["llm", "rlhf", "grpo", "verl", "vllm", "training"]
dependencies = []

[project.optional-dependencies]
dev = []
real = [
  "torch>=2.3",
  "transformers>=4.51.0",
  "datasets>=2.20.0",
  "accelerate>=1.0.0",
  "trl>=0.27.0",
  "peft>=0.12.0",
  "bitsandbytes>=0.43.0",
  "vllm>=0.8.5",
]

[project.scripts]
nano-verl-toy = "nano_verl.main:main"
nano-verl-native = "nano_verl.train_native:main"
nano-verl-grpo = "nano_verl.train_grpo:main"

[tool.setuptools.packages.find]
include = ["nano_verl*"]
